Added photo to site

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@ title: Homepage
 layout: default
 validate: true
 ---
-<!-- <div class="j-col j-col-2 adam">
-  <img src="assets/img/home/Adam.png" /></img> -->
+<div class="j-col j-col-3 adam">
+  <img src="assets/img/home/Adam.png" /></img>
+</div>
+<div class="j-col-2 j-col-7" style="overflow: hidden;">
   <h1 class="lets-talk">Let's talk </h1>
   <div class="form-bio">I translate thoughts into reality with writing, print, and digital content. If you have a project for me, please fill out the form below.</div>
-<!-- </div> -->
-  <form class="j-col-3 j-col-6 contact-form">
+  <form class="contact-form">
     <p>
       <span class="form-txt">Hi, my name is </span>
       <input class="contact-field" type="text" name="name" placeholder="Name*" required>
@@ -26,6 +27,7 @@ validate: true
       <span style="color: #ccc;">* Required</span>
     </div>
   </form>
+</div>
   <div class="confirmation">
     <div class="content">
       <div class="submit-success" style="display: none;">
