Updated photo padding

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ validate: true
 <div class="j-col j-col-3 adam">
   <img src="assets/img/home/Adam.png" /></img>
 </div>
-<div class="j-col-2 j-col-7" style="overflow: hidden;">
+<div class="j-col j-col-7" style="overflow: hidden;">
   <h1 class="lets-talk">Let's talk </h1>
   <div class="form-bio">I translate thoughts into reality with writing, print, and digital content. If you have a project for me, please fill out the form below.</div>
   <form class="contact-form">
